--- a/package.json
+++ b/package.json
@@ -35,4 +35,13 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "build:dev": "vite build --mode development",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "start": "vite"
+}
+
 }
